--- a/comments.html
+++ b/comments.html
@@ -1,7 +1,7 @@
 <!doctype html>
 <html>
 	<head>
-		<title> Roger Kaputnik's Comment Page
+		<title> Yash Shinde's Comment Page
 		</title>
 	</head>
 	<body>
