--- a/future.html
+++ b/future.html
@@ -9,7 +9,7 @@
 		<a href = "past.html">My Past</a></br>
                 <a href = "future.html">My future</a></br>
 	        <a href = "comments.html">Comments</a></br>
-		My future
+		My future endeavours
 
 
 	</body>
